Fix contrast issue in site description

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3469,8 +3469,8 @@ p > object:only-child {
 	}
 
 	.site-description {
-		font-size: 16px;
-		font-size: 1rem;
+		font-size: 19px;
+		font-size: 1.2rem;
 	}
 
 	/* Navigation */
